--- a/public/index.html
+++ b/public/index.html
@@ -23,24 +23,17 @@
 
 <!-- Navigation Sidebar and Top Header -->   
 <nav>
-    <!-- Sidebar (mobile navigation) -->
-    <ul class="sidebar">
-        <li><a href="#" id="hide-sidebar-btn"></a>
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                    <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
-                </svg>
-            </a>
-        </li>
-        <li><a href="index.html">Inventory</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a></li>
-        <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
-        <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
-        <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
-        <li><button class="dropbtn" id="emptyInventoryButton">Empty Inventory</button></li>
-    </ul>
+    <!-- Sidebar menu (mobile/tablet) -->
+        <ul class="sidebar">
+            <!-- Sidebar navigation links -->
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
+            <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
+            <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
+            <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
+        </ul>
 
     <!-- Header (desktop navigation) -->
     <header>
