--- a/public/products.html
+++ b/public/products.html
@@ -18,16 +18,10 @@
 <body>
     <!-- Navigation Sidebar and Top Header -->   
     <nav>
-        <!-- Sidebar (mobile navigation) -->
+        <!-- Sidebar menu (mobile/tablet) -->
         <ul class="sidebar">
-        <li><a href="#" id="hide-sidebar-btn"></a>
-            <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                    <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
-                </svg>
-            </a>
-        </li>
-            <li><a href="index.html">Inventory</a></li>
+            <!-- Sidebar navigation links -->
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
