Endringer i About page.

--- a/public/about.html
+++ b/public/about.html
@@ -97,22 +97,31 @@
                 <p>
                     Our algorithm estimates expiration dates based on food category, while the color-coded tracking system helps you stay on top of what’s still fresh. This way nothing goes to waste. Our goal is to make your life easier, while also promoting sustainability through better awareness of expiration dates. The app includes helpful features like filtering your personal inventory, viewing product details, adjusting quantities, and more. <strong>EatMeMaybe</strong> is perfect for students, families, or anyone looking to save money and reduce waste in a smart and easy way.
                 </p><br>
-                <p>
-                    Still curious? Check out our video and see for yourself.
-                </p>
             </div>
 
             <!-- Embedded YouTube video -->
             <div class="video-wrapper">
                 <iframe
                     src="https://www.youtube.com/embed/VIDEO_ID"
-                    title="Tutorial"
-                    frameborder="0"
-                    allowfullscreen
+                 title="Tutorial"
+                frameborder="0"
+                allowfullscreen
                 ></iframe>
-            </div>
+                     <div class="video-caption">
+                         <p>Still curious? Check out our video and see for yourself. <br>  
+                            When you add products, their expiration dates are automatically set based on their category:<br>
+                            •	Fruits and vegetables: 5 days<br>
+                            •	Cooling products: 7 days<br>
+                            •	Frozen products: 180 days<br>
+                            •	Dry products: 240 days<br>
+                            Products display expiration date warnings using colours:<br>
+                            •	<span style="color: green;">Green:</span> more than 8 days remaining<br>
+                            •	<span style="color: orange;">Yellow:</span> 7 days or less<br>
+                            •	<span style="color: red;">Red:</span> 3 days or less<br>
+                            •	<span style="color: rgb(255, 0, 0);">Expired:</span> o days left(expired)<br>
+                        </p>
+             </div>
         </div>
-    </div>
 
     <!-- Scripts for functionality -->
     <script type="module" src="JS/authHandlers.js"></script>
