--- a/public/about.html
+++ b/public/about.html
@@ -118,7 +118,7 @@
                             •	<span style="color: green;">Green:</span> more than 8 days remaining<br>
                             •	<span style="color: orange;">Yellow:</span> 7 days or less<br>
                             •	<span style="color: red;">Red:</span> 3 days or less<br>
-                            •	<span style="color: rgb(255, 0, 0);">Expired:</span> o days left(expired)<br>
+                            •	<span style="color: rgb(255, 0, 0);">Expired:</span> 0 days left(expired)<br>
                         </p>
              </div>
         </div>
