--- a/public/products.html
+++ b/public/products.html
@@ -125,7 +125,6 @@
   <div class="modal-content2">
     <button type="button" class="close2" id="custom-modal-close-btn2">✖</button>
     <h2 id="modal-product-name">Add Custom Product</h2>
-
     <div class="input-row input-inline">
         <select id="product-category2" required>
             <option value="" disabled selected>Select category</option>
@@ -135,7 +134,11 @@
             <option value="Dry Products">Dry Products</option>
         </select>
     <input type="text" id="custom-product-name2" placeholder="Enter product name">
-</div>
+
+        <label for="custom-expiration-date ">Expiration date</label>
+        <input type="date" id="custom-expiration-date " required>
+
+    </div>
 
 <label id="quantity-title" for="quantity-input">Choose Quantity</label>
 <div class="quantity-selector">
