choose date on all products

--- a/public/products.html
+++ b/public/products.html
@@ -108,7 +108,8 @@
             <button type="button" class="modal-close-btn" id="modal-close-btn">✖</button>
             <h2 id="modal-product-name">Product Name</h2>
             <p id="modal-product-category">Product Category</p>
-            
+            <label for="custom-expiration-date">Expiration date</label>
+            <input type="date" id="custom-expiration-date" required>
             <label id="quantity-title" for="quantity-input">Choose Quantity</label>
             <div class="quantity-selector">
                 <button type="button" class="quantity-btn" id="decrease-btn">−</button>
